--- a/pug/index.pug
+++ b/pug/index.pug
@@ -31,14 +31,14 @@ block content
         mj-column(width="50%" padding="10px")
             mj-image(width="160px" src="https://is4-ssl.mzstatic.com/image/thumb/Features122/v4/a1/80/fd/a180fd62-93ab-3073-5d5e-1dbd14e42a8f/mza_8625611714394215261.png/640x492fu-90.jpg" alt="Jimmy John's")/
             mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") Jimmy John's
-            mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") $2 off a sandwich for next time when you order ahead with Freaky Fast Rewards® and Apple Pay#[sup(style="font-size:10px") 1].
+            mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") $2 off a sandwich for next time when you order ahead with Freaky Fast Rewards® and Apple Pay#[sup(style="font-size:10px") 2].
             mj-text(padding-top="15px")
                 a(href="#" class="link-button") Order Now
         //-3
         mj-column(width="50%" padding="10px")
-            mj-image(width="160px" src="https://is3-ssl.mzstatic.com/image/thumb/Features122/v4/54/27/e3/5427e34e-9907-d224-9236-395082ca7f5d/mza_9579767234452450267.png/640x492fu-90.jpg" alt="HotelTonight")/
-            mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") Hotel Tonight
-            mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") 10% off your hotel reservation when you make a purchase in app with promo code #[span(style="text-transform:uppercase;") applepayht]#[sup(style="font-size:10px") 1]
+            mj-image(width="160px" src="https://is2-ssl.mzstatic.com/image/thumb/Features112/v4/1f/d4/b5/1fd4b586-92e9-14e9-960c-2039468af2de/mza_6175296496519451991.png/640x492fu-90.jpg" alt="ParkWhiz")/
+            mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") ParkWhiz
+            mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") $4 off each of your next four parking reservations of $4 or more using promo code #[span(style="text-transform:uppercase;") applepay4]#[sup(style="font-size:10px") 3]
             mj-text(padding-top="15px")
                 a(href="#" class="link-button") Get the app
         //-4
