--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -62,7 +62,7 @@
       <mj-column width="50%" padding="10px">
         <mj-image width="160px" src="https://is4-ssl.mzstatic.com/image/thumb/Features122/v4/a1/80/fd/a180fd62-93ab-3073-5d5e-1dbd14e42a8f/mza_8625611714394215261.png/640x492fu-90.jpg" alt="Jimmy John's"/>
         <mj-text font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px">Jimmy John's</mj-text>
-        <mj-text font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px">$2 off a sandwich for next time when you order ahead with Freaky Fast Rewards® and Apple Pay<sup style="font-size:10px">2</sup>.</mj-text>
+        <mj-text font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px">$2 off a sandwich for next time when you order ahead with Freaky Fast Rewards® and Apple Pay<sup style="font-size:10px">2</sup></mj-text>
         <mj-text padding-top="15px"><a class="link-button" href="#">Order Now</a></mj-text>
       </mj-column>
       <mj-column width="50%" padding="10px">
@@ -72,10 +72,10 @@
         <mj-text padding-top="15px"><a class="link-button" href="#">Get the app</a></mj-text>
       </mj-column>
       <mj-column width="50%" padding="10px">
-        <mj-image width="160px" src="https://is3-ssl.mzstatic.com/image/thumb/Features122/v4/54/27/e3/5427e34e-9907-d224-9236-395082ca7f5d/mza_9579767234452450267.png/640x492fu-90.jpg" alt="HotelTonight"/>
-        <mj-text font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px">Hotel Tonight</mj-text>
-        <mj-text font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px">10% off your hotel reservation when you make a purchase in app with promo code <span style="text-transform:uppercase;">applepayht</span><sup style="font-size:10px">1</sup></mj-text>
-        <mj-text padding-top="15px"><a class="link-button" href="#">Get the app</a></mj-text>
+        <mj-image width="160px" src="https://is3-ssl.mzstatic.com/image/thumb/Features112/v4/79/2d/45/792d458d-0fa7-b799-4e1b-2b754addc021/mza_3569095580648890123.png/640x492fu-90.jpg" alt="SONIC Drive-In"/>
+        <mj-text font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px">SONIC Drive-In</mj-text>
+        <mj-text font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px">50% off a SONIC Blast for your next order in app with Apple Pay<sup style="font-size:10px">4</sup></mj-text>
+        <mj-text padding-top="15px"><a class="link-button" href="#">Order now</a></mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
