--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -78,5 +78,13 @@
         <mj-text padding-top="15px"><a class="link-button" href="#">Order now</a></mj-text>
       </mj-column>
     </mj-section>
+    <mj-section background-color="#f5f5f7" padding="40px 25px">
+      <mj-column>
+        <mj-text font-size="12px" color="#86868b" line-height="140%">1. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new HotelTonight users. Additional terms apply.</mj-text>
+        <mj-text font-size="12px" color="#86868b" line-height="140%">2. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new Jimmy John's Freaky Fast Rewards® members. Additional terms apply.</mj-text>
+        <mj-text font-size="12px" color="#86868b" line-height="140%">3. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new ParkWhiz users. Additional terms apply.</mj-text>
+        <mj-text font-size="12px" color="#86868b" line-height="140%">4. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new SONIC app users. Additional terms apply.</mj-text>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
