--- a/pug/index.pug
+++ b/pug/index.pug
@@ -48,5 +48,13 @@ block content
             mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") 50% off a SONIC Blast for your next order in app with Apple Pay#[sup(style="font-size:10px") 4]
             mj-text(padding-top="15px")
                 a(href="#" class="link-button") Order now
+    //- Explication
+    mj-section(background-color="#f5f5f7" padding="40px 25px")
+        mj-column
+            mj-text(font-size="12px" color='#86868b' line-height="140%") 1. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new HotelTonight users. Additional terms apply.
+            mj-text(font-size="12px" color='#86868b' line-height="140%") 2. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new Jimmy John's Freaky Fast Rewards® members. Additional terms apply.
+            mj-text(font-size="12px" color='#86868b' line-height="140%") 3. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new ParkWhiz users. Additional terms apply.
+            mj-text(font-size="12px" color='#86868b' line-height="140%") 4. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new SONIC app users. Additional terms apply.
+
 
        
