mise à jour du fichier layout

--- a/pug/includes/_produit.pug
+++ b/pug/includes/_produit.pug
@@ -19,8 +19,7 @@ mj-section(background-color="#ffffff" padding="0 25px")
         mj-image(width="160px" src="https://is2-ssl.mzstatic.com/image/thumb/Features112/v4/1f/d4/b5/1fd4b586-92e9-14e9-960c-2039468af2de/mza_6175296496519451991.png/640x492fu-90.jpg" alt="ParkWhiz")/
         mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") ParkWhiz
         mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") $4 off each of your next four parking reservations of $4 or more using promo code #[span(style="text-transform:uppercase;") applepay4]#[sup(style="font-size:10px") 3]
-        mj-text(padding-top="15px")
-            a(href="#" class="link-button") Get the app
+        mj-button(padding-top="15px" href="#") Get the app
     //-4
     mj-column(width="50%" padding="10px")
         mj-image(width="160px" src="https://is3-ssl.mzstatic.com/image/thumb/Features112/v4/79/2d/45/792d458d-0fa7-b799-4e1b-2b754addc021/mza_3569095580648890123.png/640x492fu-90.jpg" alt="SONIC Drive-In")/
