--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -29,12 +29,12 @@ mjml
     mj-body(background-color="#e6e6e6")       
         //- content
         block content
-        //- map
-            block map
-            include ../includes/_map
-        //- recommended
-            block recommended
-            include ../includes/_recommended
-        //- footer
-            block footer
-            include ../includes/_footer
+        //- hero
+        block hero
+            include ../includes/_hero
+        //- produits
+        block produits
+            include ../includes/_produit
+        //- explication
+        block explication
+            include ../includes/_exp
