modification des buttons

--- a/pug/includes/_produit.pug
+++ b/pug/includes/_produit.pug
@@ -5,25 +5,24 @@ mj-section(background-color="#ffffff" padding="0 25px")
         mj-image(width="160px" src="https://is3-ssl.mzstatic.com/image/thumb/Features122/v4/54/27/e3/5427e34e-9907-d224-9236-395082ca7f5d/mza_9579767234452450267.png/640x492fu-90.jpg" alt="HotelTonight")/
         mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") Hotel Tonight
         mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") 10% off your hotel reservation when you make a purchase in app with promo code #[span(style="text-transform:uppercase;") applepayht]#[sup(style="font-size:10px") 1]
-        mj-text(padding-top="15px")
-            a(href="#" class="link-button") Get the app
+        mj-button(align="left" padding-top="15px" font-size="14px" font-weight="400" border-radius="8px" href="#") Get the app
+
     //-2
     mj-column(width="50%" padding="10px")
         mj-image(width="160px" src="https://is4-ssl.mzstatic.com/image/thumb/Features122/v4/a1/80/fd/a180fd62-93ab-3073-5d5e-1dbd14e42a8f/mza_8625611714394215261.png/640x492fu-90.jpg" alt="Jimmy John's")/
         mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") Jimmy John's
         mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") $2 off a sandwich for next time when you order ahead with Freaky Fast Rewards® and Apple Pay#[sup(style="font-size:10px") 2]
-        mj-text(padding-top="15px")
-            a(href="#" class="link-button") Order Now
+        mj-button(align="left" padding-top="15px" font-size="14px" font-weight="400" border-radius="8px" href="#") Order now
+      
     //-3
     mj-column(width="50%" padding="10px")
         mj-image(width="160px" src="https://is2-ssl.mzstatic.com/image/thumb/Features112/v4/1f/d4/b5/1fd4b586-92e9-14e9-960c-2039468af2de/mza_6175296496519451991.png/640x492fu-90.jpg" alt="ParkWhiz")/
         mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") ParkWhiz
         mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") $4 off each of your next four parking reservations of $4 or more using promo code #[span(style="text-transform:uppercase;") applepay4]#[sup(style="font-size:10px") 3]
-        mj-button(padding-top="15px" href="#") Get the app
+        mj-button(align="left" padding-top="15px" font-size="14px" font-weight="400" border-radius="8px" href="#") Get the app
     //-4
     mj-column(width="50%" padding="10px")
         mj-image(width="160px" src="https://is3-ssl.mzstatic.com/image/thumb/Features112/v4/79/2d/45/792d458d-0fa7-b799-4e1b-2b754addc021/mza_3569095580648890123.png/640x492fu-90.jpg" alt="SONIC Drive-In")/
         mj-text(font-size="19px" font-weight="600" color="#1d1d1f" padding-top="15px") SONIC Drive-In
         mj-text(font-size="14px" line-height="140%" color="#1d1d1f" padding-top="10px") 50% off a SONIC Blast for your next order in app with Apple Pay#[sup(style="font-size:10px") 4]
-        mj-text(padding-top="15px")
-            a(href="#" class="link-button") Order now
+        mj-button(align="left" padding-top="15px" font-size="14px" font-weight="400" border-radius="8px" href="#") Order now
