--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -9,9 +9,9 @@ mjml
             <meta name="format-detection" content="date=no"/>
             <meta name="format-detection" content="address=no"/>
             <meta name="format-detection" content="email=no"/>
-        mj-font(name="SF Pro Display" href="https://fonts.googleapis.com/css?family=SF+Pro+Display")
+        mj-font(name="Poppins" href="https://fonts.googleapis.com/css?family=Poppins")
         mj-attributes
-            mj-all(font-family='SF Pro Display, Helvetica, Arial, sans-serif')/
+            mj-all(font-family='Poppins, Helvetica, Arial, sans-serif')/
             mj-image(border='none')/
         mj-breakpoint(width='480px')
     //- Body
