mettre en place une fonction each pour les services

--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -22,8 +22,8 @@ mjml
         block hero
             include ../includes/_hero
         //- produits
-        block produits
-            include ../includes/_produit
+        block produits mixin
+            include ../includes/_produitMixin
         //- explication
         block explication
             include ../includes/_exp
