--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -10,7 +10,7 @@
       <meta name="format-detection" content="address=no"/>
       <meta name="format-detection" content="email=no"/>
     </mj-raw>
-    <mj-font name="Poppins" href="https://fonts.googleapis.com/css?family=Poppins"></mj-font>
+    <mj-font name="Poppins" href="https://fonts.googleapis.com/css?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"></mj-font>
     <mj-attributes>
       <mj-all font-family="Poppins, Helvetica, Arial, sans-serif"/>
       <mj-image border="none"/>
@@ -43,35 +43,41 @@
     <mj-section background-color="#ffffff" padding="0 25px">
       <mj-column width="50%" vertical-align="top">
         <mj-image width="255px" src="https://is3-ssl.mzstatic.com/image/thumb/Features122/v4/54/27/e3/5427e34e-9907-d224-9236-395082ca7f5d/mza_9579767234452450267.png/640x492fu-90.jpg" alt="Hotel Tonight"/>
-        <mj-text font-size="28px" line-height="140%" font-weight="900" color="#f5921d">Hotel Tonight</mj-text>
+        <mj-text font-size="28px" line-height="140%" font-weight="700" color="#f5921d">Hotel Tonight</mj-text>
         <mj-text font-size="16px" font-weight="400" line-height="140%" color="#1d1d1f">10% off your hotel reservation when you make a purchase in app with promo code APPLEPAYHT .1</mj-text>
         <mj-button align="left" padding-bottom="30px" background-color="#f5921d" font-size="16px" font-weight="400" border-radius="4px" href="#">Get the app</mj-button>
       </mj-column>
       <mj-column width="50%" vertical-align="top">
         <mj-image width="255px" src="https://is4-ssl.mzstatic.com/image/thumb/Features122/v4/a1/80/fd/a180fd62-93ab-3073-5d5e-1dbd14e42a8f/mza_8625611714394215261.png/640x492fu-90.jpg" alt="Jimmy John's"/>
-        <mj-text font-size="28px" line-height="140%" font-weight="900" color="#f5921d">Jimmy John's</mj-text>
+        <mj-text font-size="28px" line-height="140%" font-weight="700" color="#f5921d">Jimmy John's</mj-text>
         <mj-text font-size="16px" font-weight="400" line-height="140%" color="#1d1d1f">$2 off a sandwich for next time when you order ahead with Freaky Fast Rewards® and Apple Pay .2</mj-text>
         <mj-button align="left" padding-bottom="30px" background-color="#f5921d" font-size="16px" font-weight="400" border-radius="4px" href="#">Order now</mj-button>
       </mj-column>
       <mj-column width="50%" vertical-align="top">
         <mj-image width="255px" src="https://is2-ssl.mzstatic.com/image/thumb/Features112/v4/1f/d4/b5/1fd4b586-92e9-14e9-960c-2039468af2de/mza_6175296496519451991.png/640x492fu-90.jpg" alt="ParkWhiz"/>
-        <mj-text font-size="28px" line-height="140%" font-weight="900" color="#f5921d">ParkWhiz</mj-text>
+        <mj-text font-size="28px" line-height="140%" font-weight="700" color="#f5921d">ParkWhiz</mj-text>
         <mj-text font-size="16px" font-weight="400" line-height="140%" color="#1d1d1f">$4 off each of your next four parking reservations of $4 or more using promo code APPLEPAY4 .3</mj-text>
         <mj-button align="left" padding-bottom="30px" background-color="#f5921d" font-size="16px" font-weight="400" border-radius="4px" href="#">Get the app</mj-button>
       </mj-column>
       <mj-column width="50%" vertical-align="top">
         <mj-image width="255px" src="https://is3-ssl.mzstatic.com/image/thumb/Features112/v4/79/2d/45/792d458d-0fa7-b799-4e1b-2b754addc021/mza_3569095580648890123.png/640x492fu-90.jpg" alt="SONIC Drive-In"/>
-        <mj-text font-size="28px" line-height="140%" font-weight="900" color="#f5921d">SONIC Drive-In</mj-text>
+        <mj-text font-size="28px" line-height="140%" font-weight="700" color="#f5921d">SONIC Drive-In</mj-text>
         <mj-text font-size="16px" font-weight="400" line-height="140%" color="#1d1d1f">50% off a SONIC Blast for your next order in app with Apple Pay .4</mj-text>
         <mj-button align="left" padding-bottom="30px" background-color="#f5921d" font-size="16px" font-weight="400" border-radius="4px" href="#">Order now</mj-button>
       </mj-column>
     </mj-section>
     <mj-section background-color="#f5f5f7" padding="40px 25px">
-      <mj-column>
-        <mj-text font-size="12px" color="#86868b" line-height="140%">1. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new HotelTonight users. Additional terms apply.</mj-text>
-        <mj-text font-size="12px" color="#86868b" line-height="140%">2. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new Jimmy John's Freaky Fast Rewards® members. Additional terms apply.</mj-text>
-        <mj-text font-size="12px" color="#86868b" line-height="140%">3. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new ParkWhiz users. Additional terms apply.</mj-text>
-        <mj-text font-size="12px" color="#86868b" line-height="140%">4. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new SONIC app users. Additional terms apply.</mj-text>
+      <mj-column width="100%">
+        <mj-text font-size="14px" color="#86868b" line-height="140%">1. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new HotelTonight users. Additional terms apply.</mj-text>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-text font-size="14px" color="#86868b" line-height="140%">2. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new Jimmy John's Freaky Fast Rewards® members. Additional terms apply.</mj-text>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-text font-size="14px" color="#86868b" line-height="140%">3. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new ParkWhiz users. Additional terms apply.</mj-text>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-text font-size="14px" color="#86868b" line-height="140%">4. Offer valid through 7/13/2023 at 11:59 p.m. PT. Offer available only to new SONIC app users. Additional terms apply.</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
