amélioation du titre

--- a/pug/includes/_hero.pug
+++ b/pug/includes/_hero.pug
@@ -1,13 +1,12 @@
- //- Hero Image
+//- Hero Image
 mj-section(background-color="#FFFFFF" padding="0")
     mj-column
-        mj-image(src="https://is1-ssl.mzstatic.com/image/thumb/Features122/v4/cf/dc/45/cfdc4592-de00-042f-71c0-3382417c22cd/mza_15333454782619296284.jpg/1480x800fe-90.jpg" alt="Road trip illustration")    
+        mj-image(src="https://is1-ssl.mzstatic.com/image/thumb/Features122/v4/cf/dc/45/cfdc4592-de00-042f-71c0-3382417c22cd/mza_15333454782619296284.jpg/1480x800fe-90.jpg" alt="Road trip illustration")/   
 //- Hero Texte
 mj-section(background-color="#ffffff" padding="40px 25px")
-    mj-column
+    mj-column(width="70%")
         mj-text(font-size="32px" font-weight="700" align="center" color="#1d1d1f" line-height="120%")
-            div Road-Trip and save.
-            div With Apple Pay.
+            div Road-Trip and save. With Apple Pay.
         mj-text(font-size="17px" color="#86868b" align="center" line-height="150%" padding-top="20px")
             div Use Apple Pay for exclusive offers on food, hotels, parking, and more.
             div Now through July 13.
