--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,5 +4,5 @@ block content
     //- Logo
     mj-section(background-color='#ffffff' padding="20px 0 0 0")
         mj-column
-            mj-image(width="120px" align="left" src="https://is1-ssl.mzstatic.com/image/thumb/Features125/v4/29/3d/34/293d34e9-bfa3-7bfc-28d2-0c1b807aa403/mza_5636553478385258687.png/400x56bb-100.png" Alt="Apple Pay Perks")
+            mj-image(width="120px" align="left" src="https://is1-ssl.mzstatic.com/image/thumb/Features125/v4/29/3d/34/293d34e9-bfa3-7bfc-28d2-0c1b807aa403/mza_5636553478385258687.png/400x56bb-100.png" alt="Apple Pay Perks")/
        
