--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -13,7 +13,7 @@ mjml
         mj-attributes
             mj-all(font-family='Poppins, Helvetica, Arial, sans-serif')/
             mj-image(border='none')/
-        mj-breakpoint(width='480px')
+        mj-breakpoint(width='480px')/
     //- Body
     mj-body(background-color="#e6e6e6")       
         //- content
